rustdocs/errors/rust-bitcoin-units-src-amount-unsigned.rs.txt
error[E0433]: failed to resolve: you might be missing crate `core`
 --> ../rust-bitcoin/units/src/amount/unsigned.rs:7:5
  |
7 | use core::str::FromStr;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `core`
 --> ../rust-bitcoin/units/src/amount/unsigned.rs:8:5
  |
8 | use core::{default, fmt};
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0433]: failed to resolve: there are too many leading `super` keywords
  --> ../rust-bitcoin/units/src/amount/unsigned.rs:17:5
   |
17 | use super::error::{ParseAmountErrorInner, ParseErrorInner};
   |     ^^^^^ there are too many leading `super` keywords

error[E0433]: failed to resolve: there are too many leading `super` keywords
  --> ../rust-bitcoin/units/src/amount/unsigned.rs:18:5
   |
18 | use super::{
   |     ^^^^^ there are too many leading `super` keywords

error[E0432]: unresolved import `internals`
  --> ../rust-bitcoin/units/src/amount/unsigned.rs:12:5
   |
12 | use internals::const_casts;
   |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
   |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
   |
 5 + extern crate internals;
   |

error[E0432]: unresolved import `crate::result`
  --> ../rust-bitcoin/units/src/amount/unsigned.rs:22:12
   |
22 | use crate::result::{MathOp, NumOpError as E, NumOpResult};
   |            ^^^^^^
   |            |
   |            unresolved import
   |            help: a similar path exists: `std::result`

error[E0432]: unresolved imports `crate::FeeRate`, `crate::Weight`
  --> ../rust-bitcoin/units/src/amount/unsigned.rs:23:13
   |
23 | use crate::{FeeRate, Weight};
   |             ^^^^^^^  ^^^^^^ no `Weight` in the root
   |             |
   |             no `FeeRate` in the root

error[E0405]: cannot find trait `TryFrom` in this scope
   --> ../rust-bitcoin/units/src/amount/unsigned.rs:553:6
    |
553 | impl TryFrom<SignedAmount> for Amount {
    |      ^^^^^^^ not found in this scope
    |
    = note: 'std::convert::TryFrom' is included in the prelude starting in Edition 2021
help: consider importing this trait
    |
  7 + use std::convert::TryFrom;
    |

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0405, E0432, E0433.
For more information about an error, try `rustc --explain E0405`.
